# ecommerce-api

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
buylando/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py
core/api/: permissions.py  serializers.py  views.py
core/management/commands/: load_sample_users.py
core/migrations/: 0001_initial.py  0002_user_role.py
ecommerce/: admin.py  models.py  tasks.py  urls.py
ecommerce/api/: pagination.py  serializers.py  urls.py  views.py
ecommerce/management/commands/: load_sample_ecommerce_data.py
ecommerce/migrations/: 0001_initial.py
ecommerce/templates/ecommerce/email/: order_confirm_subject.txt  order_received.html  order_received.txt  payment_reminder.html  payment_reminder.txt  payment_reminder_subject.txt
nginx/: Dockerfile  default.conf
